player search works
